--- a/trabajo.html
+++ b/trabajo.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Miniblog</title>
+    <link rel="stylesheet" href="sti.css">
+    
 </head>
 <body>
+    <H1>MII PRIMER BLOG.</H1>
     
 </body>
 </html>
