--- a/trabajo.html
+++ b/trabajo.html
@@ -9,6 +9,19 @@
 </head>
 <body>
     <H1>MII PRIMER BLOG.</H1>
+
+    <h2>
+        Aqui tienes un texto aleatorio:
+        
+        En el corazón de la vasta selva tropical, 
+        donde los rayos del sol apenas logran filtrarse a través del espeso dosel de hojas,
+         y el aire está impregnado del aroma dulce y húmedo de la vegetación,
+          se encuentra un mundo lleno de misterio y maravilla. 
+          Los árboles gigantes se alzan majestuosamente hacia el cielo,
+     mientras que las enredaderas serpentean por el suelo, creando un laberinto verde que parece interminable. Los sonidos de la vida silvestre llenan el aire, desde el canto de los pájaros exóticos hasta el crujido de las ramas bajo las pisadas sigilosas de los animales que se desplazan en la oscuridad.</h2>
     
 </body>
+<footer>
+    <p>Este es el pie de página.</p>
+</footer>
 </html>
